# rust-code-samples

./: .gitignore
aoc/: .env  Cargo.toml  fetch-data.sh  hands.txt  hands2.txt  maze  send-reponse.sh
aoc/src/: data.rs  lib.rs  main.rs
aoc/src/solutions/: mod.rs
apis/reserv/: Cargo.toml  docker-compose.yml
apis/reserv/.sqlx/: query-e2e88c5cb60af807225a18fb6ccaa7a364dc0c4e763ba21c088fc7b4031faf01.json
apis/reserv/migrations/: 00001_create_tables_info_table.sql
backgammon/: Cargo.toml
backgammon/src/: lib.rs  main.rs
backgammon/src/agents/: agent.rs  mod.rs  model.rs  random.rs
backgammon/src/backgammon/: agent.rs  game.rs  mod.rs  players.rs
backgammon/src/core/: dice.rs  moves.rs  players.rs  positions.rs  scores.rs
backgammon/src/game/: board_printer.rs  game.rs  mod.rs
backgammon/src/model/: trainer.rs
backgammon/src/models/: mod.rs  model.rs  trainer.rs
basic/: Cargo.toml
basic/src/: main.rs
bench_example/: Cargo.toml
bench_example/src/: main.rs
bevy-sample/: Cargo.toml
bevy-sample/src/: main.rs  people.rs
bevy/sample/: Cargo.toml
bevy/sample/src/: old.main.rs
bevy/tuto_game/: Cargo.toml
bevy/tuto_game/src/: plugin.rs
burn_app/src/: main.rs  model.rs
calculator/src/: main.rs
catr/src/: lib.rs
cmd-basic/: Cargo.toml
cmd-basic/src/: main.rs
combiner/src/: main.rs
crates/: Cargo.toml  create-pg-db.sh  create-sqlite-db.sh  todos.db
crates/docker/: docker-compose.pg.yml
crates/examples/nom/: main.rs
crates/examples/seaorm-pg/: main.rs
crates/examples/seaorm-pg/migrator/: migrate_0001_create_todo_table.rs  migrator.rs  mod.rs
crates/examples/sqlx/: main.rs
crates/examples/sqlx-pg/: .env  main.rs
crates/examples/sqlx-pg/migrations/: 20200718111257_todos.sql
crates/examples/sqlx-sqlite/: .env  main.rs
crates/examples/tracing/: main.rs
database/seaorm/: Cargo.toml  Readme.md  postgres-service.yml
database/seaorm/app/: Cargo.toml
database/seaorm/app/src/: main.rs
database/seaorm/entities/: Cargo.toml
database/seaorm/migrations/: .env  Cargo.toml
excersices/: Cargo.toml  long.txt
excersices/src/: lib.rs  main.rs
frameworks/axum/: Cargo.toml
frameworks/axum/api-oauth/: Cargo.toml
frameworks/dioxus/example_app/: Cargo.toml  Dioxus.toml
frameworks/tonic-hello/: Cargo.toml  build.rs
frameworks/tonic-hello/proto/: helloworld.proto
frameworks/tonic-routes/: Cargo.toml  build.rs
frameworks/tonic-routes/proto/: route_guide.proto
frameworks/tonic-routes/src/: data.rs  helpers.rs  implements.rs  lib.rs
gcd/: Cargo.toml
gcd/src/: main.rs
guessing_game/src/: main.rs
headr/: Cargo.toml
imgtool/src/: main.rs
leetcode/: Cargo.toml
leetcode/examples/contains_duplicates/: problem.md  solution.rs
leetcode/examples/encode_decode_string/: problem.md  solution.rs
leetcode/examples/group_anagrams/: problem.md  solution.rs
leetcode/examples/is_anagram/: problem.md  solution.rs
leetcode/examples/longest_sequence/: problem.md  solution.rs
leetcode/examples/prod_but_self/: problem.md  solution.rs
leetcode/examples/top_K_frequent/: problem.md  solution.rs
leetcode/examples/two_sum/: problem.md  solution.rs
leetcode/examples/valid_sudoku/: problem.md  solution.rs
leetcode/src/: main.rs
projects/edit/: CLAUDE.md
projects/japlearn/: CLAUDE.md  Cargo.toml
projects/japlearn/src/: main.rs
projects/notes/: Cargo.toml
projects/notes/src/: app.rs  event.rs  main.rs  model.rs  storage.rs
serde-whatnow/src/: main.rs
tools/linkd_reply/: Cargo.toml
tools/linkd_reply/src/: main.rs
tools/scythe-calculator/: Cargo.toml
tools/scythe-calculator/src/: main.rs
udp-server/: Cargo.toml
uncategorized/algorithms/src/: arrays_hashing.rs
uncategorized/backgammon/: Cargo.toml
uncategorized/backgammon/src/: lib.rs
uncategorized/basic/: Cargo.toml
uncategorized/basic/src/: main.rs
uncategorized/bench_example/benches/: play_game.rs
uncategorized/bench_example/src/: lib.rs
uncategorized/burn_app/: Cargo.toml
uncategorized/catr/src/: lib.rs
uncategorized/cmd-basic/src/: lib.rs
uncategorized/combiner/src/: args.rs
uncategorized/wcr/: Cargo.toml
wcr/src/: main.rs
wcr/tests/: cli.rs
webapi/axum-sqlx-pg-example/: Cargo.toml
webapi/axum-sqlx-pg-example/src/: error.rs  main.rs  models.rs
webapi/axum-sqlx-pg-example/src/api/: routes_login.rs  routes_tickets.rs
webapi/axum-sqlx-pg-example/tests/: quick_dev.rs
webapi/realworld-axum-api/: Cargo.toml
(+46 files in other folders)
