[package]
name = "crates"
version = "0.1.0"
edition = "2024"

[[example]]
name = "tracing"
test = true

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
