[[example]]
name = "contains_duplicates"
test = true
path = "examples/contains_duplicates/solution.rs"

[[example]]
name = "is_anagram"
test = true
path = "examples/is_anagram/solution.rs"

[[example]]
name = "two_sum"
test = true
path = "examples/two_sum/solution.rs"

[[example]]
name = "group_anagrams"
test = true
path = "examples/group_anagrams/solution.rs"

[[example]]
name = "top_K_frequent"
test = true
path = "examples/top_K_frequent/solution.rs"

[[example]]
name = "encode_decode_string"
test = true
path = "examples/encode_decode_string/solution.rs"

[[example]]
name = "prod_but_self"
test = true
path = "examples/prod_but_self/solution.rs"

[[example]]
name = "valid_sudoku"
test = true
path = "examples/valid_sudoku/solution.rs"

[package]
name = "leetcode"
version = "0.1.0"
edition = "2024"

[dependencies]
rstest = "0.25.0"
