[package]
name = "tonic-routes"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
prost = "0.13.5"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1.17"
tonic = "0.13.1"

[build-dependencies]
anyhow = "1.0.98"
tonic-build = "0.13.1"
