[package]
name = "axum-sqlx-pg-example"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-cookies = "0.11.0"

[dev-dependencies]
anyhow = "1.0.97"
httpc-test = "0.1.10"
