[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
# local dependencies
migrations = { path = "../migrations" }
entities = { path = "../entities" }
# external packages
anyhow = "1.0.97"
sea-orm = { version = "1.1.8", features = [
    "macros",
    "runtime-tokio",
    "debug-print",
    "sqlx-postgres",
] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
